<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Labhyam</string>
    <string name="outward">Outward</string>
    <string name="Inward">inward</string>

    <string name="Inventory">Inventory</string>
    <string name="Logout">Log out</string>
    <string name="username">Name:</string>
    <string name="userstore_name">Store Name:</string>
    <string name="type_of_user">Type of user :</string>
    <string name="product_addition">PRODUCT ADDITION</string>
    <string name="current_product">CURRENT PRODUCT</string>
    <string name="_1">- 1 +</string>
    <string name="_10">$10</string>
    <string name="selling_price">Selling price:</string>
    <string name="purchase_price">Purchase Price:</string>
    <string name="plus">+</string>
    <string name="place_your_camera_above_the_bar_code_on_coupon_to_scan">Place your camera above the bar code on coupon to scan !</string>
    <string name="p_l">p/l</string>


    <string name="product_inventory">Inventory</string>
    <string name="exit">test1</string>
    <string name="cancel">cancel</string>
    <string name="fire">true</string>
    <string name="labhyam_txt">Labhyam</string>
    <string name="buttongradient">Button</string>
    <string name="products_txt">Products</string>
    <string name="item_list_txt">Item list</string>
    <string name="_1_txt">- 1 +</string>
    <string name="_10_txt">$10</string>
    <string name="inward_products_txt">inward_products</string>
    <string name="login_txt">login</string>
    <string name="enter_your_mobile_number_txt">Enter your mobile number</string>
    <string name="password_txt">Password</string>
    <string name="submit_txt">submit</string>
    <string name="enter_product_name_txt">Enter product name</string>
    <string name="enter_quantity_here_txt">Enter quantity here </string>
    <string name="unit_type_txt">unit type</string>
    <string name="enter_unit_type_txt">Enter unit type</string>
    <string name="procurment_price_txt">Procurment Price</string>
    <string name="add_product_txt">Add Product</string>
    <string name="quantity_txt">Quantity</string>
    <string name="enter_procurent_price_here_txt">Enter Procurement Price here</string>
    <string name="add_txt">add</string>
    <string name="clear_txt">Clear</string>
    <string name="scan_the_barcode_txt">Scan the Barcode</string>
    <string name="place_camera_above_the_barcode_of_the_product_txt">Place camera above the barcode of the product</string>
    <string name="add_product_text">ADD PRODUCT</string>
    <string name="checchi_sd_dsds_sdsds_txt">checchi sd dsds sdsds</string>
    <string name="checkout_txt">Checkout</string>
    <string name="select_variant_txt">Select Variant</string>
    //
    <string name="procurement_price_txt">Procurement Price</string>
    <string name="selling_price_txt">Selling Price</string>
    <string name="quantity_and_type_txt">quantity and type</string>
    <string name="test_txt">test</string>
    <string name="add_more_txt">ADD MORE</string>
    <string name="finish_txt">Finish</string>
    <string name="product_name_txt">product name</string>
    <string name="price_txt">Price:</string>
    <string name="product_addition_txt">PRODUCT ADDITION</string>
    <string name="current_product_txt">CURRENT PRODUCT</string>
    <string name="selling_price_text">SELLING PRICE :</string>
    <string name="purchase_price_txt">Purchase price :</string>

    <string name="approval_inventory">Approval Inventory</string>
    <string name="approve_txt">approve</string>
    <string-array name="unit_types">
        <item>grams</item>
        <item>ltr</item>
        <item>pc</item>
        <item>packs</item>
        <item>ml</item>
        <item>kg</item>
        <item>unit</item>
        <item>nos</item>
        <item>Bags</item>
        <item>Set</item>
        <item>mm</item>
        <item>bottles</item>
        <item>Bunch</item>
        <item>Pcs</item>
        <item>milligrams</item>
        <item>mtr</item>
        <item>cans</item>

    </string-array>
    <string-array name="city">
        <item>Mumbai</item>
        <item>Chennai</item>
        <item>Hyderabad</item>
        <item>Vishakapatnam</item>
        <item>vijayawada</item>
        <item>Guntur</item>
        <item>Ongole</item>
        <item>Nellore</item>
    </string-array>
    <string-array name="storetype">
        <item>kirana stores</item>
        <item>pan wala</item>
        <item>Sweet shop</item>
        <item>general stores</item>
        <item>cloth store</item>
        <item>Guntur</item>
        <item>Ongole</item>
        <item>Nellore</item>
    </string-array>

    <string-array name="manufactured_type">
        <item>Buy &amp; sell</item>
        <item>Expense</item>
        <item>Manufactured</item>


    </string-array>


    <string name="barcode_txt">Barcode</string>
    <string name="inventor_entry">Inventor_entry</string>
    <string name="enter_buying_price" translatable="false">Enter buying price</string>


    <string name="support_message" translatable="false"><u>Customer Support</u></string>
    <string name="support">support</string>
</resources>