<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#730099"
        android:gravity="center"
        android:text="@string/product_addition_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/size_18sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_product_txt"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="@dimen/size_18sp"
        android:padding="15dp"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:layout_width="130dp"
        android:layout_height="90dp"
        android:src="@mipmap/splash_image" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:gravity="center_vertical"
            android:text="-"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:text="1"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:gravity="center_vertical"
            android:text="@string/plus"
            android:textColor="@color/black"
            android:textSize="30sp" />
    </LinearLayout>
    <EditText
        android:layout_width="75sp"
        android:layout_height="40sp"
        android:layout_marginLeft="50dp"
        android:background="@color/white"
        android:textAlignment="center"
        android:text="$10"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="30sp"
        android:layout_marginStart="30sp"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selling_price_text"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            />
        <EditText
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:text="$10"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchase_price_txt"
            android:textAllCaps="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="25sp"
            />
        <EditText
            android:layout_width="75dp"
            android:layout_height="40dp"
            android:text="$10"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:background="@color/white"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="270dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@color/white"
            android:text="@string/add_more_txt"
            android:textSize="@dimen/size_20sp" />
        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="#730099"
            android:text="@string/finish_txt"
            android:textColor="@color/white"
            android:textSize="@dimen/size_20sp" />
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:padding="5dp"
            android:text="@string/inward_products_txt"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="-7dp"
            tools:layout_editor_absoluteY="482dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="506dp">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>