<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/cardview_light_background">

    <RelativeLayout
        android:id="@+id/appBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#730099"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/tvstoreactivity"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="#730099"
            android:gravity="center"
            android:text="@string/product_inventory"
            android:layout_centerInParent="true"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvTitle"
        android:padding="5dp"
        android:textColor="@android:color/black"
        android:text="@string/products_txt"
        android:layout_below="@+id/appBarLayout"
        android:textSize="15sp"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        android:orientation="vertical"
        android:layout_above="@id/alter_inventory"
        >

    </androidx.recyclerview.widget.RecyclerView>


    <LinearLayout
        android:id="@+id/llalterinventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
       >

        <Button
            android:id="@+id/alter_inventory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#730099"
            android:layout_marginTop="80dp"
            android:text="@string/approval_inventory"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>