<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@color/white"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#730099"
        android:gravity="center"
        android:text="@string/product_addition"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:layout_weight="2">
        <Button
            android:id="@+id/btnTodaySales"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/plbuttonborderdesign"
            tools:text="@string/outward"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/btnTodayProfit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/plbuttondesign2"
            tools:text="@string/Inward"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:padding="5dp"
        android:orientation="horizontal"
        android:layout_weight="2">
        <Button
            android:id="@+id/btnMonthlySales"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/plbuttondesign3"
            tools:text="kfnlsnv"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/btnMonthlyProfit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="2"
            android:background="@drawable/plbuttondesign4"
            tools:text="assdkdnf"
            android:textColor="@color/black"
            android:textSize="20sp"/>
    </LinearLayout>



</LinearLayout>