<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:id="@+id/llpending"
    android:orientation="vertical">

 <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/idProductImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@mipmap/splash_image" />

        <TextView
            android:id="@+id/inwardproductname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/product_name_txt"
            android:lines="2"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp" >

    <TextView
        android:id="@+id/tvQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/quantity_and_type_txt"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvQty"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvLabelPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_txt"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnapprove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#730099"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="Approve"/>

    </LinearLayout>

    </RelativeLayout>
</RelativeLayout>
